# BluePATA

./: .gitignore  CMakeLists.txt  flash.ld  flash.s  main.c  makefile  so.elf  so.list  stm32f103.ld
include/: gpio_drive.h  oled_drive.h  spi_drive.h  startup.h  stm32f103.h  stm32f10x.h  system_stm32f10x.h
src/: gpio_drive.c  main.c  oled_drive.c  spi_drive.c  startup.c
